src/components/chip-set/chip-set.scss
@import '../../style/internal/mdc-variables';
@import '../input-field/input-field';
@import '../../style/internal/shared_input-select-picker';

@import '@limetech/mdc-chips/mdc-chips';

@import '../../style/mixins';

/**
 * @prop --icon-background-color: Background color of the icon. Defaults to transparent.
 * @prop --icon-color: Color of the icon. Defaults to 54% black.
 * @prop --background-color: Background color of the field when type is set to input.
 * @prop --background-color-disabled: Background color of the field when type is set to input and the component is disabled or readonly.
 * @prop --input-chip-set-selected-chip-color: Color of the highlight around selected chips in input chip-sets.
 */

.mdc-chip {
    @include is-elevated-inset-clickable;
    max-width: 100%;
    min-width: pxToRem(32);
    padding: 0 pxToRem(1);
    display: inline-grid;
    grid-auto-flow: column;
    background-color: $mdc-chip-background-color;

    span[role='gridcell'] {
        min-width: 0; // This is needed to force mdc-chip__text (which is inside this span) to truncate

        &:only-child {
            .mdc-chip__text {
                padding-left: pxToRem(12);
            }
        }

        &:first-child {
            .mdc-chip__text {
                padding-left: pxToRem(12);
            }
        }
    }

    &:hover {
        background-color: $mdc-chip-background-color;
    }

    &.mdc-chip--selected {
        box-shadow: var(--button-shadow-inset);

        &:active {
            box-shadow: var(--button-shadow-inset-pressed);
        }
    }
}

.mdc-chip.mdc-chip--selected .mdc-chip__checkmark,
.mdc-chip__checkmark {
    margin-right: pxToRem(4);
    margin-left: pxToRem(8);
}

.mdc-chip__text {
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
    padding: 0 pxToRem(12) 0 pxToRem(4);
}

limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
    background-color: var(--icon-background-color, transparent);
    margin: 0 !important;
    color: var(--icon-color, rgba(0, 0, 0, 0.54));
}

.mdc-chip-set {
    align-items: center;
    min-height: $height-of-mdc-text-field;

    &.mdc-chip-set--input {
        padding-top: $padding-top-of-chipset-input;
        padding-bottom: 0;
        width: 100%;

        .mdc-chip--selected {
            // When chip is selected with keyboard (backspace / arrow-keys) to be deleted
            box-shadow: 0 0 0 pxToRem(3) var(--lime-deep-red);

            .mdc-chip__icon--trailing {
                color: var(--lime-deep-red);
            }
        }
    }

    &.disabled:not(.mdc-chip-set--input) {
        @include looks-disabled;
    }
}

.mdc-chip__icon {
    &.mdc-chip__icon--trailing {
        transition: background-color 0.2s ease;

        margin-left: 0;
        margin-right: pxToRem(5);

        width: pxToRem(22);
        height: pxToRem(22);

        &:hover {
            background-color: rgba($lime-deep-red, 0.2);

            svg {
                transform: scale(0.7);
            }
        }

        svg {
            transition: transform 0.2s ease;
            display: block;
            transform: scale(0.9);
        }
    }
}

.mdc-text-field {
    @include mdc-states-hover-opacity(0);
    @include mdc-states-focus-opacity(0, true);

    border-bottom-style: solid;
    border-bottom-width: pxToRem(1);

    width: 100%;
    height: auto;
    cursor: text;

    .mdc-text-field__input {
        width: auto;
        height: $height-of-chip;
        line-height: $height-of-chip;
        padding: 0 pxToRem(12);
        margin-bottom: pxToRem(8);

        flex-grow: 1;
        flex-shrink: 0;

        border-bottom: none;

        &.hidden {
            // This class is added, as soon as there is a chip selected and displayed
            // This input field should not be visually visible as it breaks the UI in some cases
            // But it should be rendered to be able to tab between fields and do other keyboard commands /Kia
            opacity: 0;
            position: absolute;
            z-index: -100;
        }
    }
}

.mdc-text-field--disabled .mdc-chip {
    pointer-events: all;

    &.disabled {
        @include looks-disabled;
    }
}

.mdc-floating-label {
    &.mdc-text-field--required::after {
        content: '*';
    }
    &.force-float {
        @include label--float-above;
    }
}

.force-invalid {
    @extend .mdc-text-field--invalid;
}

.clear-all-button {
    transition: opacity 0.3s ease;
    @include clear-all-button;

    position: absolute;
    right: pxToRem(8);
    top: pxToRem(26);

    opacity: 0; // Is hidden, but can receive focus (such as when navigating through tab indexes).

    &:focus,
    .has-chips:not(.mdc-text-field--disabled):hover &,
    .has-chips:not(.mdc-text-field--disabled).mdc-text-field--focused & {
        opacity: 1;
    }

    :not(.has-chips) &,
    .has-chips.mdc-text-field--disabled & {
        display: none; // Won't receive focus when disabled
    }
}

.has-leading-icon {
    &:not(.has-chips) {
        .mdc-text-field__input {
            padding-left: pxToRem(40);
        }

        .mdc-floating-label {
            &:not(.force-float) {
                padding-left: pxToRem(40);
            }
        }
    }

    &.has-chips,
    &.mdc-text-field--focused {
        .search-icon {
            transform: translateY(6px);
        }
    }

    .mdc-chip {
        &:first-of-type {
            margin-left: 40px;
        }
    }

    .search-icon {
        transition: transform 0.2s ease;
        position: absolute;
        top: pxToRem(16);
        left: pxToRem(16);
    }

    limel-icon {
        background-color: transparent;
    }
}

.delimiter {
    opacity: 0.5;
    padding: 0 pxToRem(2);
}

